--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,4 @@
-- react solutions e aprovar solutions
-
-- my profile page: ver meus problemas/soluções
-- my profile page: deletar meus problemas/soluções
-- problem page: botoes funcionais e modo de edição
 - problem page: se solução for minha editar
+- my profile page
+- logica de recarregar na problem page
 -  refatorar auth and user logic
