--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,6 @@
 - problem page: se solução for minha editar
+- add olution
+-  class validator
 - my profile page
 - logica de recarregar na problem page
 -  refatorar auth and user logic
